--- a/matplotlib/Quick start guide/interactive-figures.ipynb
+++ b/matplotlib/Quick start guide/interactive-figures.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "68b758be",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b50f1262fe7443fc9e191913cf73a673",
+       "model_id": "cc4d35bceeec43f8830bf7a27eb7765d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,6 +45,47 @@
    ],
    "source": [
     "fig, ax = plt.subplots()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3a69b7df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln, = ax.plot(range(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "76aba2dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.set_color('orange')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3dff560e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<contextlib.ExitStack at 0x258ff5e2450>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.ion()"
    ]
   }
  ],
