draggable rect operational

--- a/matplotlib/Quick start guide/Event-handling-and-picking.ipynb
+++ b/matplotlib/Quick start guide/Event-handling-and-picking.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "id": "c8c16bca",
    "metadata": {},
    "outputs": [
@@ -98,6 +98,17 @@
     "linebuilder = LineBuilder(line)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ef8960b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Draggable rectangle exercise:\n",
+    "\n"
    ]
   }
  ],
