--- a/matplotlib/Quick start guide/Axis Scales.ipynb
+++ b/matplotlib/Quick start guide/Axis Scales.ipynb
@@ -296,11 +296,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2cbd7c7f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogTransform(base=10, nonpositive='clip')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ax.yaxis.get_transform())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "514eb84f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X axis\n",
+      "<matplotlib.ticker.AutoLocator object at 0x00000219FF16B890>\n",
+      "<matplotlib.ticker.ScalarFormatter object at 0x00000219FA3A59C0>\n",
+      "Y axis\n",
+      "<matplotlib.ticker.LogLocator object at 0x00000219FF162820>\n",
+      "<matplotlib.ticker.LogFormatterSciNotation object at 0x00000219FEACD950>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('X axis')\n",
+    "print(ax.xaxis.get_major_locator())\n",
+    "print(ax.xaxis.get_major_formatter())\n",
+    "\n",
+    "print('Y axis')\n",
+    "print(ax.yaxis.get_major_locator())\n",
+    "print(ax.yaxis.get_major_formatter())"
+   ]
   }
  ],
  "metadata": {
