--- a/tensorflow_learnings/TF_quickstart_beginners.ipynb
+++ b/tensorflow_learnings/TF_quickstart_beginners.ipynb
@@ -21,29 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "dbe6b3b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mnist = tf.keras.datasets.mnist\n",
     "\n",
-    "(x_train, y_test), (x_test, y_test) = mnist.load_data()\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
     "x_train, x_test = x_train / 255.0, x_test / 255.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "2c64f607",
    "metadata": {},
    "outputs": [
@@ -67,19 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "5814e58e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.69861823,  0.0467757 ,  0.29799694, -0.07552419,  0.19921157,\n",
-       "        -0.20983125, -0.53286254,  0.44768518,  0.6984884 ,  0.21588416]],\n",
+       "array([[ 0.20008881,  0.5618883 ,  0.09929552, -0.6746368 , -0.01265191,\n",
+       "        -0.20036316, -0.3604582 , -0.23494269,  0.4657034 , -1.00272   ]],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,11 +82,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "87629a00",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.12409853, 0.17819445, 0.11219995, 0.05174616, 0.10031699,\n",
+       "        0.08314814, 0.07084744, 0.08032206, 0.16185331, 0.03727292]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.nn.softmax(predictions).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ca14fa61",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "22411440",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float32(2.4871314)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss_fn(y_train[:1], predictions).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f720a033",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam',\n",
+    "              loss=loss_fn,\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c26feffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - accuracy: 0.9117 - loss: 0.3010\n",
+      "Epoch 2/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 0.9564 - loss: 0.1476\n",
+      "Epoch 3/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 0.9684 - loss: 0.1074\n",
+      "Epoch 4/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 0.9725 - loss: 0.0889\n",
+      "Epoch 5/5\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 2ms/step - accuracy: 0.9761 - loss: 0.0751\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x24067ed2a50>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e70c3260",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 - 0s - 1ms/step - accuracy: 0.9778 - loss: 0.0741\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.07406866550445557, 0.9778000116348267]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(x_test,  y_test, verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "cd232d56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_model = tf.keras.Sequential([\n",
+    "    model,\n",
+    "    tf.keras.layers.Softmax()\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a2f0d2ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5, 10), dtype=float32, numpy=\n",
+       "array([[3.6863490e-08, 2.7716800e-08, 2.6438287e-05, 2.4390228e-04,\n",
+       "        1.6494273e-11, 2.4626186e-07, 3.9762096e-13, 9.9969375e-01,\n",
+       "        7.6600935e-07, 3.4711498e-05],\n",
+       "       [1.0653195e-07, 4.7063135e-04, 9.9950433e-01, 1.6170554e-06,\n",
+       "        1.6535185e-18, 2.3351551e-05, 2.0755467e-08, 8.4930862e-14,\n",
+       "        1.5216452e-08, 3.3555604e-12],\n",
+       "       [2.9301171e-07, 9.9613684e-01, 5.6506152e-04, 1.5894426e-05,\n",
+       "        4.1381303e-05, 6.3644334e-06, 4.7524609e-06, 3.0391554e-03,\n",
+       "        1.8851775e-04, 1.6682769e-06],\n",
+       "       [9.9992812e-01, 7.7587137e-09, 5.5224693e-05, 9.8566026e-08,\n",
+       "        2.0660918e-08, 3.7727386e-06, 7.1518384e-06, 4.2876749e-07,\n",
+       "        5.8196736e-08, 5.2025780e-06],\n",
+       "       [5.0448222e-07, 1.5352619e-08, 4.5640527e-06, 3.2444138e-08,\n",
+       "        9.9379927e-01, 5.2690330e-06, 8.0124573e-07, 1.8154280e-05,\n",
+       "        1.5523476e-06, 6.1698509e-03]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probability_model(x_test[:5])"
+   ]
   }
  ],
  "metadata": {
